Fix checklist run list hide on mobile

--- a/code/web/src/styles/sass/checklist-detail.sass
+++ b/code/web/src/styles/sass/checklist-detail.sass
@@ -99,3 +99,6 @@
 
     .ChecklistDescription
       font-size: $font-size !important
+
+    .ChecklistRunList
+      display: none
